# SMATRI

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: rust.yml
smatri-client/: Cargo.toml  Dioxus.toml
smatri-client/src/: main.rs
smatri-server/: Cargo.toml  testing.sqlite
smatri-server/src/: main.rs  util.rs
