[package]
name = "smatri-server"
version = "0.1.0"
edition = "2024"

[dependencies]
ohttp = { version = "0.7", features = ["server"] }
hpke = "0.13"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
tower = "0.5"
http = "1.4"
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.38.0"
